// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageryBase should render 1`] = `
<DocumentFragment>
  <img
    class="sc-bdfBwQ bQajuQ"
    display="block"
    height="auto"
    width="100%"
  />
</DocumentFragment>
`;

exports[`ImageryBase should render styles object-fit and object-position 1`] = `
<DocumentFragment>
  <img
    class="sc-bdfBwQ ftRMpI"
    display="block"
    height="auto"
    width="100%"
  />
</DocumentFragment>
`;
